--- a/artikel/21.tex
+++ b/artikel/21.tex
@@ -9,7 +9,7 @@
   \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, aus Gründen, die sich aus ihrer besonderen Situation ergeben, jederzeit
    gegen die \hyperref[itm:04-2]{Verarbeitung} sie betreffender \hyperref[itm:04-1]{personenbezogener Daten}, die aufgrund von \hyperref[itm:06-1]{Artikel 6
    Absatz 1} Buchstaben \hyperref[itm:06-1e]{e} oder \hyperref[itm:06-1f]{f} erfolgt, Widerspruch einzulegen; dies gilt
-   auch für ein auf diese Bestimmungen gestütztes Profiling. Der Verantwortliche verarbeitet die personenbezogenen
+   auch für ein auf diese Bestimmungen gestütztes \hyperref[itm:04-4]{Profiling}. Der Verantwortliche verarbeitet die personenbezogenen
    Daten nicht mehr, es sei denn, er kann zwingende schutzwürdige Gründe für die \hyperref[itm:04-2]{Verarbeitung} nachweisen, die die
    Interessen, Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Person} überwiegen, oder die \hyperref[itm:04-2]{Verarbeitung} dient der Geltendmachung,
    Ausübung oder Verteidigung von Rechtsansprüchen.
@@ -17,7 +17,7 @@
 
   \item Werden \hyperref[itm:04-1]{personenbezogene Daten} verarbeitet, um Direktwerbung zu betreiben, so hat die \hyperref[itm:04-1]{betroffene Person} das
    Recht, jederzeit Widerspruch gegen die \hyperref[itm:04-2]{Verarbeitung} sie betreffender \hyperref[itm:04-1]{personenbezogener Daten} zum Zwecke derartiger
-   Werbung einzulegen; dies gilt auch für das Profiling, soweit es mit solcher Direktwerbung in Verbindung steht.
+   Werbung einzulegen; dies gilt auch für das \hyperref[itm:04-4]{Profiling}, soweit es mit solcher Direktwerbung in Verbindung steht.
   \label{itm:21-2}
 
   \item Widerspricht die \hyperref[itm:04-1]{betroffene Person} der \hyperref[itm:04-2]{Verarbeitung} für Zwecke der Direktwerbung, so werden die
