--- a/artikel/35.tex
+++ b/artikel/35.tex
@@ -24,7 +24,7 @@
   \begin{enumerate}
   
     \item systematische und umfassende Bewertung persönlicher Aspekte natürlicher Personen, die sich auf automatisierte
-     \hyperref[itm:04-2]{Verarbeitung} einschließlich Profiling gründet und die ihrerseits als Grundlage für Entscheidungen dient, die
+     \hyperref[itm:04-2]{Verarbeitung} einschließlich \hyperref[itm:04-4]{Profiling} gründet und die ihrerseits als Grundlage für Entscheidungen dient, die
      Rechtswirkung gegenüber natürlichen Personen entfalten oder diese in ähnlich erheblicher Weise beeinträchtigen;
     \label{itm:35-3a}
 
