--- a/artikel/47.tex
+++ b/artikel/47.tex
@@ -53,7 +53,7 @@
 
     \item die Rechte der \hyperref[itm:04-1]{betroffenen Personen} in Bezug auf die \hyperref[itm:04-2]{Verarbeitung} und die diesen offenstehenden Mittel zur
      Wahrnehmung dieser Rechte einschließlich des Rechts, nicht einer ausschließlich auf einer automatisierten
-     \hyperref[itm:04-2]{Verarbeitung} -- einschließlich Profiling -- beruhenden Entscheidung nach \hyperref[ch:22]{Artikel 22} unterworfen
+     \hyperref[itm:04-2]{Verarbeitung} -- einschließlich \hyperref[itm:04-4]{Profiling} -- beruhenden Entscheidung nach \hyperref[ch:22]{Artikel 22} unterworfen
      zu werden sowie des in \hyperref[ch:79]{Artikel 79} niedergelegten Rechts auf Beschwerde bei der zuständigen
      Aufsichtsbehörde beziehungsweise auf Einlegung eines Rechtsbehelfs bei den zuständigen Gerichten der
      Mitgliedstaaten und im Falle einer Verletzung der \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften} Wiedergutmachung
