--- a/artikel/70.tex
+++ b/artikel/70.tex
@@ -37,7 +37,7 @@
     \label{itm:70-1e}
 
     \item Bereitstellung von Leitlinien, Empfehlungen und bewährten Verfahren gemäß \hyperref[itm:70-1e]{Buchstabe e des
-     vorliegenden Absatzes} zur näheren Bestimmung der Kriterien und Bedingungen für die auf Profiling beruhenden
+     vorliegenden Absatzes} zur näheren Bestimmung der Kriterien und Bedingungen für die auf \hyperref[itm:04-4]{Profiling} beruhenden
      Entscheidungen gemäß \hyperref[itm:22-2]{Artikel 22 Absatz 2};
     \label{itm:70-1f}
 
