--- a/artikel/14.tex
+++ b/artikel/14.tex
@@ -70,7 +70,7 @@
      Quellen stammen;
     \label{itm:14-2f}
 
-    \item das Bestehen einer automatisierten Entscheidungsfindung einschließlich Profiling gemäß \hyperref[ch:22]
+    \item das Bestehen einer automatisierten Entscheidungsfindung einschließlich \hyperref[itm:04-4]{Profiling} gemäß \hyperref[ch:22]
      {Artikel 22} Absätze \hyperref[itm:22-1]{1} und \hyperref[itm:22-4]{4} und -- zumindest in diesen Fällen --
      aussagekräftige Informationen über die involvierte Logik sowie die Tragweite und die angestrebten Auswirkungen
      einer derartigen \hyperref[itm:04-2]{Verarbeitung} für die \hyperref[itm:04-1]{betroffene Person}.
