--- a/artikel/06.tex
+++ b/artikel/06.tex
@@ -101,7 +101,7 @@
     \item die möglichen Folgen der beabsichtigten Weiterverarbeitung für die \hyperref[itm:04-1]{betroffenen Personen},
     \label{itm:06-4d}
 
-    \item das Vorhandensein geeigneter Garantien, wozu Verschlüsselung oder Pseudonymisierung gehören kann.
+    \item das Vorhandensein geeigneter Garantien, wozu Verschlüsselung oder \hyperref[itm:04-5]{Pseudonymisierung} gehören kann.
     \label{itm:06-4e}
 
   \end{enumerate}
