--- a/artikel/32.tex
+++ b/artikel/32.tex
@@ -15,7 +15,7 @@
 
   \begin{enumerate}
   
-    \item die Pseudonymisierung und Verschlüsselung \hyperref[itm:04-1]{personenbezogener Daten};
+    \item die \hyperref[itm:04-5]{Pseudonymisierung} und Verschlüsselung \hyperref[itm:04-1]{personenbezogener Daten};
     \label{itm:32-1a}
 
     \item die Fähigkeit, die Vertraulichkeit, Integrität, Verfügbarkeit und Belastbarkeit der Systeme und Dienste im
