--- a/artikel/40.tex
+++ b/artikel/40.tex
@@ -28,7 +28,7 @@
     \item Erhebung \hyperref[itm:04-1]{personenbezogener Daten};
     \label{itm:40-2c}
 
-    \item Pseudonymisierung \hyperref[itm:04-1]{personenbezogener Daten};
+    \item \hyperref[itm:04-5]{Pseudonymisierung} \hyperref[itm:04-1]{personenbezogener Daten};
     \label{itm:40-2d}
 
     \item Unterrichtung der Öffentlichkeit und der \hyperref[itm:04-1]{betroffenen Personen};
