--- a/artikel/25.tex
+++ b/artikel/25.tex
@@ -10,7 +10,7 @@
    und der Zwecke der \hyperref[itm:04-2]{Verarbeitung} sowie der unterschiedlichen Eintrittswahrscheinlichkeit und Schwere der mit der
    \hyperref[itm:04-2]{Verarbeitung} verbundenen Risiken für die Rechte und Freiheiten natürlicher Personen trifft der Verantwortliche
    sowohl zum Zeitpunkt der Festlegung der Mittel für die \hyperref[itm:04-2]{Verarbeitung} als auch zum Zeitpunkt der eigentlichen
-   \hyperref[itm:04-2]{Verarbeitung} geeignete technische und organisatorische Maßnahmen -- wie z. B. Pseudonymisierung -- trifft, die dafür
+   \hyperref[itm:04-2]{Verarbeitung} geeignete technische und organisatorische Maßnahmen -- wie z. B. \hyperref[itm:04-5]{Pseudonymisierung} -- trifft, die dafür
    ausgelegt sind, die Datenschutzgrundsätze wie etwa Datenminimierung wirksam umzusetzen und die notwendigen Garantien
    in die \hyperref[itm:04-2]{Verarbeitung} aufzunehmen, um den Anforderungen dieser Verordnung zu genügen und die Rechte der \hyperref[itm:04-1]{betroffenen
    Personen} zu schützen.
