--- a/artikel/89.tex
+++ b/artikel/89.tex
@@ -11,7 +11,7 @@
    Forschungszwecken oder zu statistischen Zwecken unterliegt geeigneten Garantien für die Rechte und Freiheiten der
    \hyperref[itm:04-1]{betroffenen Person} gemäß dieser Verordnung. Mit diesen Garantien wird sichergestellt, dass technische und
    organisatorische Maßnahmen bestehen, mit denen insbesondere die Achtung des Grundsatzes der Datenminimierung
-   gewährleistet wird. Zu diesen Maßnahmen kann die Pseudonymisierung gehören, sofern es möglich ist, diese Zwecke auf
+   gewährleistet wird. Zu diesen Maßnahmen kann die \hyperref[itm:04-5]{Pseudonymisierung} gehören, sofern es möglich ist, diese Zwecke auf
    diese Weise zu erfüllen. In allen Fällen, in denen diese Zwecke durch die Weiterverarbeitung, bei der die
    Identifizierung von \hyperref[itm:04-1]{betroffenen Personen} nicht oder nicht mehr möglich ist, erfüllt werden können, werden diese
    Zwecke auf diese Weise erfüllt.
