--- a/artikel/02.tex
+++ b/artikel/02.tex
@@ -8,7 +8,7 @@
 
   \item Diese Verordnung gilt für die ganz oder teilweise automatisierte \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]
    {personenbezogener Daten} sowie für die nichtautomatisierte \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]
-   {personenbezogener Daten}, die in einem Dateisystem gespeichert sind oder gespeichert werden sollen.
+   {personenbezogener Daten}, die in einem \hyperref[itm:04-6]{Dateisystem} gespeichert sind oder gespeichert werden sollen.
   \label{itm:02-1}
 
   \item Diese Verordnung findet keine Anwendung auf die \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten}
